objects/PMC_SS_AccountSalesAreaRelationship__c.object
<CustomObject>
    <description>Junction Object to relate Account and Sales Areas</description>
    <fields>
        <fullName>PMC_CPQ_DistributionChannel__c</fullName>
        <formula>CASE( TEXT( PMC_SS_SalesArea__r.PMC_SS_DistributionChannel__c ),
&quot;0&quot;,&quot;Common&quot;,
&quot;00&quot;,&quot;Common&quot;,
&quot;&quot;)</formula>
        <label>Distribution Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_Division__c</fullName>
        <formula>CASE( TEXT(PMC_SS_SalesArea__r.PMC_SS_Division__c),
&quot;10&quot;,&quot;Domestic&quot;,
&quot;20&quot;,&quot;Export&quot;,
&quot;30&quot;,&quot;Intercompany&quot;,&quot;&quot;)</formula>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOrganization__c</fullName>
        <formula>TEXT( PMC_SS_SalesArea__r.PMC_SS_SalesOrganization__c )</formula>
        <label>Sales Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_Account__c</fullName>
        <description>Master Detail relationship between Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Areas</relationshipLabel>
        <relationshipName>AccountSalesAreRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalUniqueIdentifier__c</fullName>
        <description>Stores unique identifier of record with concatenation of: SAP account number + Sales Org + Division + Distribution Channel</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Unique Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Specifies whether this object is active or not</description>
        <inlineHelpText>When checked, this junction relationship is Active</inlineHelpText>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesArea__c</fullName>
        <description>Master Detail relationship to Sales Area</description>
        <label>Sales Area</label>
        <referenceTo>PMC_SS_SalesArea__c</referenceTo>
        <relationshipName>AccountSalesAreRelationships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Account Sales Area Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_SS_Account__c</columns>
        <columns>PMC_CPQ_Division__c</columns>
        <columns>PMC_CPQ_SalesOrganization__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Sales Area Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>